# algorithms-data-structures

lab1-linked-lists/zad1/: CMakeLists.txt  main.c  optional.h  queue.h  stack.c  stack.h
lab1-linked-lists/zad2/: circularLinkedList.c  circularLinkedList.h
lab1-linked-lists/zad3/: circularLinkedList.h
lab2-array-sorts/src/arr_gen/: GenUtils.hpp
lab2-array-sorts/src/benchmark/: BenchUtils.cpp  BenchUtils.hpp
lista1/zad1/: queue.c
lista1/zad2/: CMakeLists.txt  main.c
lista1/zad3/: .gitignore  CMakeLists.txt  circularLinkedList.c  main.c
lista2/solution/: zad1-4.sh  zad2-3.sh
lista2/src/arr_gen/: CMakeLists.txt  GenCommon.hpp  GenUtils.cpp  main.cpp
lista2/src/arr_sort/: .gitignore  CMakeLists.txt  SortUtils.cpp  SortUtils.hpp  Sorts.cpp  Sorts.hpp  SortsCommon.hpp  main.cpp
lista2/src/benchmark/: BenchCommon.hpp  CMakeLists.txt  main.cpp
lista2/src/benchmark/include/: GenUtils.cpp  SortCommon.hpp  SortUtils.hpp  Sorts.hpp
lista2/src/plotter/: main.py
lista2/zad1/arr_gen/: CMakeLists.txt  main.cpp
lista2/zad1/arr_sort/: CMakeLists.txt  Sorts.cpp  Sorts.hpp  common.hpp  main.cpp
lista2/zad1/solution/: arr_sort  solution.sh  tmpndxd68fz-ascii.cast
lista2/zad2/: solution.sh
lista2/zad2-3/: solution.sh
lista2/zad2-3/benchmark/: CMakeLists.txt  Sorts.cpp  common.hpp  main.cpp
lista2/zad2-3/dataset/: dual_pivot_k=1  dual_pivot_k=10  dual_pivot_k=100  dual_pivot_k=100_long  dual_pivot_k=10_long  dual_pivot_k=1_long  insertion_k=1  insertion_k=10  insertion_k=100  kmerge_k=1  kmerge_k=10  kmerge_k=100  kmerge_k=100_long  kmerge_k=10_long  kmerge_k=1_long  merge_k=1  merge_k=10  merge_k=100  merge_k=100_long  merge_k=10_long  merge_k=1_long  quick_hybrid_k=1  quick_hybrid_k=10  quick_hybrid_k=100  quick_hybrid_k=100_long  quick_hybrid_k=10_long  quick_hybrid_k=1_long  (+6 more)
lista2/zad4/: arr_sort  solution.sh  tmpk4daw8ir-ascii.cast
(+33 files in other folders)
